Amend styling to remain compatible with themes and light/dark mode — fixes #1

--- a/pi-hole@fnxweb.com/stylesheet.css
+++ b/pi-hole@fnxweb.com/stylesheet.css
@@ -1,11 +1,6 @@
-StLabel
+.pihole-status
 {
-  color: #ffffff;
-}
-
-.pihole-label
-{
-  color: #999999;
+  font-weight: bold;
 }
 
 .pihole-indent
